Refactor to fix sonar issues